--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
                     </div>
                     
                     <div class="flex gap-2 card p-2" id="tool-palette">
+                        <button id="undo-btn" class="tool-btn btn">↩️</button>
+                        <button id="redo-btn" class="tool-btn btn">↪️</button>
                         <button id="brush-small" class="tool-btn btn">S</button>
                         <button id="brush-medium" class="tool-btn btn btn-primary">M</button>
                         <button id="brush-large" class="tool-btn btn">L</button>
@@ -351,6 +353,55 @@
             }
         };
 
+        class DrawingHistory {
+            constructor(maxSteps = 20) {
+                this.history = [];
+                this.currentStep = -1;
+                this.maxSteps = maxSteps;
+            }
+
+            saveState(canvas) {
+                if (this.currentStep < this.history.length - 1) {
+                    this.history = this.history.slice(0, this.currentStep + 1);
+                }
+
+                if (this.history.length >= this.maxSteps) {
+                    this.history.shift();
+                }
+
+                this.history.push(canvas.toDataURL());
+                this.currentStep = this.history.length - 1;
+            }
+
+            undo(canvas, ctx) {
+                if (this.currentStep > 0) {
+                    this.currentStep--;
+                    this.restoreState(canvas, ctx);
+                }
+            }
+
+            redo(canvas, ctx) {
+                if (this.currentStep < this.history.length - 1) {
+                    this.currentStep++;
+                    this.restoreState(canvas, ctx);
+                }
+            }
+
+            restoreState(canvas, ctx) {
+                const img = new Image();
+                img.onload = () => {
+                    ctx.clearRect(0, 0, canvas.width, canvas.height);
+                    ctx.drawImage(img, 0, 0, canvas.width / (window.devicePixelRatio || 1), canvas.height / (window.devicePixelRatio || 1));
+                };
+                img.src = this.history[this.currentStep];
+            }
+
+            clear() {
+                this.history = [];
+                this.currentStep = -1;
+            }
+        }
+
         // Game Core - All functionality embedded
         class DrawPartyGame {
             constructor() {
@@ -378,6 +429,7 @@
                 this.currentColor = '#FFFFFF'; // Start with white
                 this.currentSize = 5;
                 this.currentTool = 'brush';
+                this.drawingHistory = new DrawingHistory();
 
                 this.playerColors = [
                     '#ff595e', '#ffca3a', '#8ac926', '#1982c4', '#6a4c93', '#ff924c', '#22d3ee', '#f957a8'
@@ -462,6 +514,8 @@
                 document.getElementById('submit-name').addEventListener('click', submitName);
                 document.getElementById('player-name').addEventListener('keypress', (e) => { if (e.key === 'Enter') submitName(); });
 
+                document.getElementById('undo-btn').addEventListener('click', () => this.undo());
+                document.getElementById('redo-btn').addEventListener('click', () => this.redo());
                 document.getElementById('brush-small').addEventListener('click', () => this.selectBrush(2));
                 document.getElementById('brush-medium').addEventListener('click', () => this.selectBrush(5));
                 document.getElementById('brush-large').addEventListener('click', () => this.selectBrush(10));
@@ -515,7 +569,11 @@
                     ctx.stroke();
                     this.lastPos = pos;
                 };
-                const stop = () => this.isDrawing = false;
+                const stop = () => {
+                    if (!this.isDrawing) return;
+                    this.isDrawing = false;
+                    this.drawingHistory.saveState(document.getElementById('drawing-canvas'));
+                }
 
                 canvas.addEventListener('mousedown', start);
                 canvas.addEventListener('mousemove', draw);
@@ -524,6 +582,18 @@
                 canvas.addEventListener('touchstart', start, { passive: false });
                 canvas.addEventListener('touchmove', draw, { passive: false });
                 canvas.addEventListener('touchend', stop);
+            }
+
+            undo() {
+                const canvas = document.getElementById('drawing-canvas');
+                const ctx = canvas.getContext('2d');
+                this.drawingHistory.undo(canvas, ctx);
+            }
+
+            redo() {
+                const canvas = document.getElementById('drawing-canvas');
+                const ctx = canvas.getContext('2d');
+                this.drawingHistory.redo(canvas, ctx);
             }
 
             selectColor(color) {
@@ -553,6 +623,7 @@
                 const ctx = canvas.getContext('2d');
                 ctx.fillStyle = 'white';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
+                this.drawingHistory.saveState(canvas);
             }
 
             updateToolButtons() {
